cilium-networkpolicies/infisical-networkpolicies/infisical-operator-to-kubeapi.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: infisical-operator-to-kubeapi
  namespace: infisical
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: secrets-operator
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
