cilium-networkpolicies/infisical-networkpolicies/netpol-infisical-operator.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-infisical-operator
  namespace: infisical
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: secrets-operator
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: app.infisical.com
      toPorts:
        - ports:
            - port: "443"
